<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorFondo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/curva4"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp">

        <ImageView
            android:id="@+id/imageViewUsuario"
            android:layout_width="80dp"
            android:layout_height="55dp"
            android:src="@drawable/usuario"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/icono_usuario"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:src="@drawable/notificacion" />

        <!-- <ImageView
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/config" /> -->

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/textViewTitulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:text="        Mi Wallet SSI"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageViewBuscar"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/lupa"
                    android:contentDescription="@string/buscar_credenciales"/>


        </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/CV1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp">

                        <LinearLayout
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:background="#D3D3D3" />

                            <TextView
                                android:id="@+id/textViewCV1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:text="CV1"
                                android:textSize="16sp" />

                            <ImageView
                                android:id="@+id/imageViewOptionsCredencial1"
                                android:layout_width="80dp"
                                android:layout_height="30dp"
                                android:layout_gravity="end"
                                android:layout_marginTop="8dp"
                                android:src="@drawable/config"
                                app:tint="?attr/colorControlNormal" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/CV2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp">

                        <LinearLayout
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:background="#D3D3D3" />

                            <TextView
                                android:id="@+id/textViewCV2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:text="CV"
                                android:textSize="16sp" />

                            <ImageView
                                android:id="@+id/imageViewOptionsCredencial2"
                                android:layout_width="80dp"
                                android:layout_height="30dp"
                                android:layout_gravity="end"
                                android:layout_marginTop="8dp"
                                android:src="@drawable/config"
                                app:tint="?attr/colorControlNormal" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </HorizontalScrollView>

            <TextView
                android:id="@+id/textViewActividadReciente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="Actividad reciente"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewActividad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/curva4"
        android:gravity="center|center_vertical"
        android:orientation="horizontal"
        android:padding="19dp">

        <Button
            android:id="@+id/boton_menu_1_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/boton_home"
            android:drawablePadding="0dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:icon="@drawable/home"
            app:iconPadding="0dp"
            app:iconSize="40dp"
            app:iconTint="#000000" />

        <Button
            android:id="@+id/boton_menu_1_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/boton_añadir"
            android:drawablePadding="0dp"
            android:paddingLeft="28dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:icon="@drawable/anadir"
            app:iconSize="30dp"
            app:iconTint="#000000" />

    </LinearLayout>

</LinearLayout>